# mining-the-sky

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-run-web.bat  build-run.bat
.cargo/: config.toml
.github/workflows/: pages.yml
crates/app/: Cargo.toml  Trunk.toml  index.html
crates/app/src/: bot.rs  build.rs  flight.rs  fx.wgsl  hud.rs  launch.rs  main.rs  mission.rs  overlay.wgsl  planet.wgsl  plasma.wgsl  plasma_composite.wgsl  plasma_mesh.wgsl  plume.wgsl  rocket.rs  rocket.wgsl  scene.wgsl  sim_thread.rs  sky.wgsl  terrain_job.rs  traffic.rs  ui.rs  universe.rs
crates/sim/: Cargo.toml
crates/sim/src/: ascent.rs  attitude.rs  body.rs  lib.rs  orbit.rs  plot.rs  vehicle.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: cubesphere.rs  elevation.rs  lib.rs  octree.rs  quadtree.rs  raster.rs  render.rs  surfacenets.rs
crates/worldcity/: Cargo.toml
crates/worldcity/src/: cache.rs  index.rs  lib.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: grid.rs  hydrology.rs  lib.rs  lights.rs  planet.rs  render.rs  rng.rs  roads.rs  sites.rs
docs/: BODIES.md  DESIGN.md  system_catalog.md
docs/plans/: 3d-rocket-pad.md
