[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Mining the Sky real-time client (wgpu / WebGPU, native + wasm)"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
wgpu = "29"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glam = "0.30"
sim = { path = "../sim" }
log = "0.4"
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Navigator",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "Node",
    "Performance",
] }
