[package]
name = "sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Orbital mechanics and launch-to-orbit simulation for Mining the Sky"

[dependencies]
glam = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

[lib]
name = "sim"
path = "src/lib.rs"

[[bin]]
name = "launch"
path = "src/bin/launch.rs"

[[bin]]
name = "attitude"
path = "src/bin/attitude.rs"
