[package]
name = "worldgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Procedural planet, hydrology, city, road and night-light generation for Mining the Sky"

[dependencies]
glam = "0.30"
noise = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
rand_pcg = "0.3"
rayon = "1"

[lib]
name = "worldgen"
path = "src/lib.rs"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"
